--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -24,3 +24,6 @@ font_family      JetBrains Mono Medium
 bold_font        JetBrains Mono Bold
 italic_font      JetBrains Mono Italic
 bold_italic_font JetBrains Mono Bold Italic
+allow_remote_control yes
+listen_on unix:/tmp/nnn.fifo
+enabled_layouts splits
